Fixed  MAGETWO-9927: Invalid vertical alignment of header links for "Electron" theme

--- a/app/design/frontend/magento2/electron/css/styles.less
+++ b/app/design/frontend/magento2/electron/css/styles.less
@@ -728,6 +728,7 @@ a:visited {
         .login {
             display: inline-block;
             margin-left: 20px;
+            vertical-align: bottom;
             li {
                 margin: 0;
             }
